Fix Folia thread access in commands and events (#92)
* Fix Folia thread access in commands and events
* Reschedule async game events instead of discarding them
* Build give command items per target
* Drop inert async game event rescheduling and report dump-log to sender